--- a/signup.html
+++ b/signup.html
@@ -6,7 +6,7 @@
     <title>Signup-Form</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./signup.css">
 </head>
 <body>
@@ -79,7 +79,13 @@
                     <input type="text" id="Zipcode" name="Zipcode" placeholder="Zipcode">
                 </div>
                 <div class="Romania">
-                    <input type="text" id="Romania" name="Romania" placeholder="Romania">               
+                    <select id="country" name="country">
+                        <option>Romania</option>
+                        <option>India</option>
+                        <option>Australia</option>
+                        <option>Europe</option>
+                        <option>Canada</option>
+                    </select>              
                 </div>
             </div>
         </div>
@@ -92,7 +98,14 @@
                 <input type="text" id="Queries" name="Queries" placeholder="Ask something......"> 
             </div>
         </div>
+
+        <div class="signup">
+            <div class="signup-button">
+                <h3>SIGN UP</h3>
+            </div>
+        </div>
     </div>
+
 
 </body>
 </html>
