--- a/signup.html
+++ b/signup.html
@@ -7,10 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./signup.css">
+    <link rel="stylesheet" href="./css/signup.css">
 </head>
 <body>
-    <div class="Signup-Form">
+    <div class="Signup-Form">   
         <div class="Heading">
             <h2>Email Sign Up Form</h2>
         </div>
